18-11-24/svc_ingress/deployment-toto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toto
  labels:
    app: toto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: toto
  template:
    metadata:
      labels:
        app: toto
    spec:
      volumes: 

      containers:
      - name: ckad-formation-ingress
        image:  lbouquin/ckad-formation-ingress:0.0.22
        ports:
        - containerPort: 80
