18-11-24/svc_ingress/service-bar.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar
spec:
  selector:
    app: bar
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
